<resources>
    <string name="app_name">慧屏监控</string>
    <string name="versionName">1.1</string>
    <string name="versionCode">2</string>
    <string name="load_failed">加载失败，请点击重试</string>
    <string name="loading">正在加载中...</string>
    <string name="username">用户名</string>
    <string name="password">输入密码</string>
    <string name="login">登录</string>
    <string name="confirm">确认</string>
    <string name="servicename">我的服务器</string>
    <string name="icon1">AP监控</string>
    <string name="icon2">变价监控</string>
    <string name="icon3">注册监控</string>
    <string name="icon4">电量监控</string>
    <string name="icon5">电量降浮监控</string>
    <string name="icon6">筛选</string>
    <string name="icon7">工单</string>
    <string name="icon8">申请</string>
    <string name="chooseShop">选择门店</string>
    <string name="logo">杭州升腾科技</string>
    <string name="apid">APID:</string>
    <string name="apaddr">APADDR:</string>
    <string name="tagnum">绑定标签数量:</string>
    <string name="lasttime">最后一次注册时间:</string>
    <string name="allShop">所有门店变价失败的标签数量:</string>
    <string name="str_recorder_normal">按住说话</string>
    <string name="jmui_record_voice_hint">按住 说话</string>
    <string name="jmui_send_voice_hint">松开结束</string>
    <string name="str_recorder_want_cancel">松开手指，取消发送</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jmui_business_card">名片</string>
    <string name="send">发送</string>
    <string name="picture">图片</string>
    <string name="take_photo">拍照</string>
    <string name="jmui_loading">正在加载</string>
    <string name="load_origin_image">查看原图</string>
    <string name="origin_picture">原图</string>
    <string name="choose">选择</string>
    <string name="combine_title">(%s)</string>
    <string name="selected_num">(%s)</string>
    <string name="group_name_hit">群聊名称</string>
    <string name="jmui_send">发送</string>
    <string name="jmui_cancel">取消</string>
    <string name="sending_hint">正在发送</string>
    <string name="jmui_move_to_cancel_hint">手指上滑，取消发送</string>
    <string name="jmui_cancel_record_voice_hint">松开手指，取消发送</string>
    <string name="jmui_time_too_short_toast">时间太短！</string>
    <string name="jmui_resend_commit">重发</string>
    <string name="jmui_resend_message_hint">重发该消息？</string>
    <string name="downloading_hint">正在下载</string>
    <string name="jmui_location">位置</string>
    <string name="file">文件</string>
    <string name="picture_num_limit_toast">你最多只能同时发送9张图片</string>



    <string name="jmui_local_picture_not_found_toast">暂无外部存储，某些本地图片不可预览</string>
    <string name="jmui_sdcard_not_exist_toast">暂无外部存储</string>
    <string name="camera_not_prepared">摄像头尚未准备好</string>
    <string name="sdcard_not_prepare_toast">sdcard尚未准备好</string>
    <string name="choose_album_title">选择相册</string>
    <string name="jmui_voice_length">10"</string>
    <string name="jmui_record_voice_permission_request">若要使用语音功能，请选择允许录音</string>
    <string name="jmui_voice_fetch_failed_toast">获取语音失败，请重试</string>
    <string name="jmui_illegal_state_toast">录音状态异常,请稍后重试</string>
    <string name="jmui_symbol_second">\"</string>
    <string name="jmui_time_format_year_month_day">yyyy年-MM月-dd日</string>
    <string name="jmui_time_format_accuracy">yyyy-MM-dd HH:mm </string>
    <string name="jmui_time_format_hours">HH:mm</string>
    <string name="jmui_yesterday">昨天</string>
    <string name="jmui_before_dawn">凌晨</string>
    <string name="jmui_morning">早上</string>
    <string name="jmui_afternoon">下午</string>
    <string name="jmui_night">晚上</string>
    <string name="jmui_monday">周一</string>
    <string name="jmui_tuesday">周二</string>
    <string name="jmui_wednesday">周三</string>
    <string name="jmui_thursday">周四</string>
    <string name="jmui_friday">周五</string>
    <string name="jmui_saturday">周六</string>
    <string name="jmui_sunday">周日</string>
    <string name="year">年</string>
    <string name="jmui_month">月</string>
    <string name="jmui_day">日</string>
    <string name="second">秒</string>
</resources>
