<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_10"
    android:background="@drawable/edittext_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_oneLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:text="@string/apid"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_apid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="192.168.20.23"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_twoLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_oneLine"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:text="@string/apaddr"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_apaddr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="111"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_threeLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_twoLine"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:text="@string/tagnum"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_threeLine"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:text="@string/lasttime"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_lastTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2015-01-02 18:20:50"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_alarm"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_10"
            android:src="@drawable/ling"
            android:visibility="gone" />
    </RelativeLayout>
</android.support.v7.widget.CardView>