<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/ll_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dp_36"
        android:layout_marginRight="@dimen/dp_36"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/login_name"
                android:layout_gravity="center_vertical"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                >

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:hint="用户名"/>
        </android.support.design.widget.TextInputLayout>
            <!--<EditText-->
                <!--android:id="@+id/et_username"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_marginLeft="@dimen/dp_14"-->
                <!--android:background="@null"-->
                <!--android:hint="@string/username"-->
                <!--android:textColorHint="@color/colorGary" />-->
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_user"
        android:layout_marginLeft="@dimen/dp_36"
        android:layout_marginRight="@dimen/dp_36"
        android:layout_marginTop="@dimen/dp_36"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/login_serect"
                android:layout_gravity="center_vertical"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                >

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorGary" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_psw"
        android:layout_marginLeft="@dimen/dp_36"
        android:layout_marginRight="@dimen/dp_36"
        android:layout_marginTop="@dimen/dp_36"
        android:background="@drawable/login_confirm_selector"
        android:onClick="btn_confirm_login"
        android:text="@string/login"
        android:textSize="@dimen/dp_18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_10"
        android:padding="@dimen/dp_10"
        android:text="@string/logo"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_16" />
</RelativeLayout>
