<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlackBg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/fragment_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageView
                    android:id="@+id/iv_message"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/dp_10"
                    android:src="@drawable/message_normal" />

                <ImageView
                    android:id="@+id/iv_user"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:src="@drawable/my" />

                <TextView
                    android:id="@+id/tv_change_server"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="服务"
                    android:textSize="@dimen/sp_24" />

                <ImageView
                    android:id="@+id/iv_arrow"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/tv_change_server"
                    android:src="@drawable/arrow_03" />
            </RelativeLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginTop="@dimen/dp_20">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:id="@+id/rl_ap_monitoring"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/tubiao1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:text="@string/icon1"
                            android:textColor="@color/colorYellow"
                            android:textSize="@dimen/sp_16" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_change_price"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/tubiao2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/icon2"
                            android:textColor="@color/colorViolet"
                            android:textSize="@dimen/sp_16" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_register_monitoring"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/tubiao3" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/icon3"
                            android:textColor="@color/colorGreen"
                            android:textSize="@dimen/sp_16" />
                    </RelativeLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:id="@+id/rl_Battery_monitoring"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/tubiao4" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="@string/icon4"
                            android:textColor="@color/iconRed"
                            android:textSize="@dimen/sp_16" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_Battery_danger_monitoring"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/tubiao5" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:text="@string/icon5"
                            android:textColor="@color/iconWhite"
                            android:textSize="@dimen/sp_16" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:visibility="invisible">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/tubiao3" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/icon3"
                            android:textColor="@color/colorYellow"
                            android:textSize="@dimen/sp_16" />
                    </RelativeLayout>
                </TableRow>
            </TableLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@color/colorBgGary" />

            <RelativeLayout
                android:id="@+id/rl_helper"
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <ImageView
                    android:id="@+id/iv_setting"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_34"
                    android:src="@drawable/tubiao6" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_toRightOf="@+id/iv_setting"
                    android:text="监控助手"
                    android:textSize="@dimen/sp_22" />

                <ImageView
                    android:id="@+id/iv_arrow_setting"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:src="@drawable/arrow_r" />
            </RelativeLayout>

            <include layout="@layout/setting_item" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBgGary" />

            <RelativeLayout
                android:id="@+id/rl_work_order"
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <ImageView
                    android:id="@+id/iv_form"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_34"
                    android:src="@drawable/tubiao7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_toRightOf="@+id/iv_form"
                    android:text="工单"
                    android:textSize="@dimen/sp_22" />

                <ImageView
                    android:id="@+id/iv_arrow_form"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp_10"
                    android:src="@drawable/arrow_r" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBgGary" />
            <include layout="@layout/setting_item2" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/right"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="#2E2E2E"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_60"
            android:src="@drawable/my_name" />

        <TextView
            android:id="@+id/right_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_22"
            android:text="@string/username"
            android:textColor="@color/colorYellow"
            android:textSize="@dimen/sp_18" />

        <LinearLayout
            android:id="@+id/ll_update_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_22"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/my_serect" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/dp_14"
                android:text="修改密码"
                android:textColor="@color/colorTextGary"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_22"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/my_out" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/dp_14"
                android:text="退出登录"
                android:textColor="@color/colorTextGary"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>
